# tauri-nuxt-template

./: .gitignore  README.md  app.vue  nuxt.config.ts  package-lock.json  package.json
components/: Greet.vue
layouts/: default.vue
pages/: index.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
